platfrom-engineer-test/infra-k8s/k8s-apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 80
      nodePort: 31234 
  type: NodePort
